--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -2,6 +2,8 @@
 {% load static %}
 
 {% block page_header %}
+
+	<!-- Page Header -->
     <div class="container header-container">
         <div class="row">
             <div class="col"></div>
@@ -16,9 +18,11 @@
                 <h1 class="display-4 logo-font text-black">
                     Available for character commissions.
                 </h1>
+
+				<!-- View Showcase Button -->
                 <div class="my-5">
                     <h4>
-                        <a href="" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">View Showcase</a>
+                        <a href="" class="view-showcase-button btn btn-lg rounded-0 text-uppercase py-3">View Showcase</a>
                     </h4>
                 </div>
             </div>
