--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -15,9 +15,9 @@
     <div class="container h-100">
         <div class="row h-100">
             <div class="col-7 col-md-6 my-auto">
-                <h1 class="display-4 logo-font text-black">
-                    Available for character commissions.
-                </h1>
+                <h3 class="display-4 logo-font text-black">
+                    D&D Artist available for character commissions.
+                </h3>
 
 				<!-- View Showcase Button -->
                 <div class="my-5">
