--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -6,15 +6,10 @@
             </a>
         </li>
 
-        <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="clothing-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <li class="nav-item ">
+            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" aria-haspopup="true" aria-expanded="false">
                 Showcase
             </a>
-            <div class="dropdown-menu border-0" aria-labelledby="clothing-link">
-                <a href="" class="dropdown-item">Race</a>
-                <a href="" class="dropdown-item">Class</a>
-                <a href="" class="dropdown-item">All Characters</a>
-            </div>
         </li>
 
         <li class="nav-item">
