Added product details page and navigation links.

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -22,7 +22,7 @@
 				<!-- View Showcase Button -->
                 <div class="my-5">
                     <h4>
-                        <a href="" class="view-showcase-button btn btn-lg rounded-0 text-uppercase py-3">View Showcase</a>
+                        <a href="{% url 'commissions' %}" class="view-showcase-button btn btn-lg rounded-0 text-uppercase py-3">View Showcase</a>
                     </h4>
                 </div>
             </div>
