--- a/static/css/base.css
+++ b/static/css/base.css
@@ -9,7 +9,6 @@ body {
     color: black;
     font-family: 'MedievalSharp', cursive;
     font-style: normal;
-    font-weight: 500;
 }
 
 /* from Bulma */
@@ -89,5 +88,16 @@ body {
 
     .header-container {
         padding-top: 164px;
+    }
+}
+
+/* pad the top a bit when navbar is collapsed on mobile */
+@media (max-width: 991px) {
+    .header-container {
+        padding-top: 116px;
+    }
+
+    body {
+        height: calc(100vh - 116px);
     }
 }
