--- a/showcase/templates/commissions/commissions.html
+++ b/showcase/templates/commissions/commissions.html
@@ -26,11 +26,11 @@
                         <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
                             <div class="card h-100 border-0">
                                 {% if commission.image %}
-                                <a href="">
+                                <a href="{% url 'commission_detail' commission.id %}">
                                     <img class="card-img-top img-fluid" src="{{ commission.image.url }}" alt="{{ commission.name }}">
                                 </a>
                                 {% else %}
-                                <a href="">
+                                <a href="{% url 'commission_detail' commission.id %}">
                                     <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.jpg" alt="{{ commission.name }}">
                                 </a>
                                 {% endif %}
