--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -7,7 +7,7 @@
         </li>
 
         <li class="nav-item ">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="{% url 'commissions' %}" aria-haspopup="true" aria-expanded="false">
                 Showcase
             </a>
         </li>
@@ -20,7 +20,7 @@
 
         <li class="nav-item">
             <a class="logo-font font-weight-bold nav-link text-black" href="#" aria-haspopup="true" aria-expanded="false">
-                Commissions
+                Requests
             </a>
         </li>
     </ul>
