--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -24,7 +24,7 @@
 				<a href="{% url 'commissions' %}?category=sorcerer" class="dropdown-item">Sorcerer</a>
 				<a href="{% url 'commissions' %}?category=warlock" class="dropdown-item">Warlock</a>
 				<a href="{% url 'commissions' %}?category=wizard" class="dropdown-item">Wizard</a>
-				<a href="{% url 'commissions' %}" class="dropdown-item">All Classes</a>
+				<a href="{% url 'commissions' %}?sort=category&direction=asc" class="dropdown-item">All Classes</a>
 			</div>
 		</li>
 
