--- a/showcase/templates/commissions/commission_detail.html
+++ b/showcase/templates/commissions/commission_detail.html
@@ -30,6 +30,13 @@
                 <div class="commission-details-container mb-5 mt-md-5">
                     <p class="mb-0">{{ commission.name }}</p>
                     <p class="lead mb-0 text-left font-weight-bold">${{ commission.price }}</p>
+					{% if commission.category %}
+                        <p class="small mt-1 mb-0">
+                            <a class="text-muted" href="{% url 'commissions' %}?category={{ commission.category.name }}">
+                                <i class="fas fa-tag mr-1"></i>{{ commission.category.friendly_name }}
+                            </a>
+                        </p>
+					{% endif %}
                     <p class="mt-3">{{ commission.description|linebreaks }}</p>
                 </div>
             </div>
