--- a/showcase/templates/commissions/commissions.html
+++ b/showcase/templates/commissions/commissions.html
@@ -14,10 +14,23 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col text-center mt-3">
-                <h2 class="logo-font">Showcase</h2>
+                <h2 class="logo-font">Commission Showcase</h2>
+                {% for c in current_categories %}
+                    <a class="category-badge text-decoration-none" href="{% url 'commissions' %}?category={{ c.name }}">
+                        <span class="p-2 mt-2 badge badge-white text-black rounded-0 border border-dark">{{ c.friendly_name }}</span>
+                    </a>
+                {% endfor %}
                 <hr class="w-50 mb-1">
             </div>
         </div>
+		<div class="row">
+			<div class="col text-center mt-3">
+				<p class="text-muted mt-3 text-center">
+					{{ commissions|length }} Commissions{% if search_term %} found for
+					<strong>"{{ search_term }}"</strong>{% endif %}
+				</p>
+			</div>
+		</div>
         <div class="row">
             <div class="commission-container col-10 offset-1">
                 <div class="row mt-1 mb-2"></div>
@@ -41,6 +54,13 @@
                                     <div class="row">
                                         <div class="col">
                                             <p class="lead mb-0 text-left font-weight-bold">${{ commission.price }}</p>
+											{% if commission.category %}
+                                                <p class="small mt-1 mb-0">
+                                                    <a class="text-muted" href="{% url 'commissions' %}?category={{ commission.category.name }}">
+                                                        <i class="fas fa-tag mr-1"></i>{{ commission.category.friendly_name }}
+                                                    </a>
+                                                </p>
+											{% endif %}
                                         </div>
                                     </div>
                                 </div>
