--- a/static/css/base.css
+++ b/static/css/base.css
@@ -39,6 +39,12 @@ body {
     color: white;
 }
 
+.btn-outline-black {
+    background: white;
+    color: black !important;
+    border: 1px sold black;
+}
+
 .view-showcase-button:hover,
 .view-showcase-button:active,
 .view-showcase-button:focus,
