--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -28,8 +28,8 @@
                         <table class="table table-sm table-borderless">
                             <thead class="text-black">
                                 <tr>
-                                    <th scope="col">Purchase Info</th>
-                                    <th scope="col"></th>
+                                    <th scope="col">Poster Image</th>
+                                    <th scope="col">Poster Name</th>
                                     <th scope="col">Price</th>
                                     <th scope="col">Qty</th>
                                     <th scope="col">Subtotal</th>
