--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -30,13 +30,13 @@
 
         <li class="nav-item">
             <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" aria-haspopup="true" aria-expanded="false">
-                Prices & Rules
+				Requests
             </a>
         </li>
 
         <li class="nav-item">
             <a class="logo-font font-weight-bold nav-link text-black" href="#" aria-haspopup="true" aria-expanded="false">
-                Requests
+                Contact
             </a>
         </li>
     </ul>
