--- a/static/css/base.css
+++ b/static/css/base.css
@@ -8,7 +8,6 @@ body {
     height: calc(100vh - 164px);
     color: black;
     font-family: 'MedievalSharp', cursive;
-    font-style: normal;
 }
 
 /* from Bulma */
@@ -28,7 +27,7 @@ body {
     width: fit-content;
 }
 
-.view-showcase-button {
+.shop-now-button {
     background: black;
     color: white;
     min-width: 260px;
@@ -42,12 +41,19 @@ body {
 .btn-outline-black {
     background: white;
     color: black !important;
-    border: 1px sold black;
+    border: 1px solid black;
 }
 
-.view-showcase-button:hover,
-.view-showcase-button:active,
-.view-showcase-button:focus,
+.btn-outline-black:hover,
+.btn-outline-black:active,
+.btn-outline-black:focus {
+    background: black;
+    color: white !important;
+}
+
+.shop-now-button:hover,
+.shop-now-button:active,
+.shop-now-button:focus,
 .btn-black:hover,
 .btn-black:active,
 .btn-black:focus {
@@ -61,6 +67,10 @@ body {
 
 .border-black {
     border: 1px solid black !important;
+}
+
+.bg-black {
+    background: #000 !important;
 }
 
 .overlay {
@@ -159,7 +169,6 @@ a.category-badge > span.badge:hover {
     overflow-x: hidden;
     overflow-y: auto;
 }
-
 
 /* -------------------------------- Media Queries */
 
