--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -196,7 +196,7 @@
 					<span class="icon mr-2">
 						<i class="fas fa-gifts"></i>
 					</span>
-					<span class="text-uppercase">Go back to browsing.</span>
+					<span class="text-uppercase">Continue browsing</span>
 				</a>
 			</div>
 		</div>
