--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -34,6 +34,12 @@
             </a>
         </li>
 
+		<li class="nav-item">
+			<a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" aria-haspopup="true" aria-expanded="false">
+				Blog
+			</a>
+		</li>
+
         <li class="nav-item">
             <a class="logo-font font-weight-bold nav-link text-black" href="#" aria-haspopup="true" aria-expanded="false">
                 Contact
