--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -39,7 +39,11 @@
                             {% for item in cart_items %}
                                 <tr>
                                     <td class="p-3 w-25">
-                                        <img class="img-fluid rounded" src="{{ item.commission.image.url }}">
+                                        {% if item.commission.image %}
+                                        <img class="img-fluid rounded" src="{{ item.commission.image.url }}" alt="{{ item.commission.name }}">
+                                        {% else %}
+                                        <img class="img-fluid rounded" src="{{ MEDIA_URL }}noimage.jpg" alt="{{ item.commission.name }}">
+                                        {% endif %}
                                     </td>
                                     <td class="py-3">
                                         <p class="my-0"><strong>{{ item.commission.name }}</strong></p>
