--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -20,7 +20,11 @@
                 {% for item in cart_items %}
                     <div class="row">
                         <div class="col-3 my-1">
-                            <img class="w-100" src="{{ item.commission.image.url }}">
+                            {% if item.commission.image %}
+                                <img class="w-100" src="{{ item.commission.image.url }}" alt="{{ item.commission.name }}">
+                            {% else %}
+                                <img class="w-100" src="{{ MEDIA_URL }}noimage.jpg" alt="{{ item.commission.name }}">
+                            {% endif %}
                         </div>
                         <div class="col-9">
                             <p class="my-0"><strong>{{ item.commission.name }}</strong></p>
