--- a/showcase/templates/commissions/commission_detail.html
+++ b/showcase/templates/commissions/commission_detail.html
@@ -37,6 +37,12 @@
                             </a>
                         </p>
 					{% endif %}
+                    {% if request.user.is_superuser %}
+                        <small class="ml-3">
+                            <a href="{% url 'edit_commission' commission.id %}">Edit</a> | 
+                            <a class="text-danger" href="{% url 'delete_commission' commission.id %}">Delete</a>
+                        </small>
+                    {% endif %}
                     <p class="mt-3">{{ commission.description|linebreaks }}</p>
                     <form class="form" action="{% url 'add_to_cart' commission.id %}" method="POST">
                         {% csrf_token %}
