Fixed about page ofr mobile view.

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -16,7 +16,7 @@
         <div class="row h-100">
             <div class="col-7 col-md-6 my-auto">
                 <h3 class="display-4 logo-font text-black">
-                    D&D Artist available for character commissions.
+					Imagination to life
                 </h3>
 
 				<!-- View Showcase Button -->
