--- a/home/templates/home/about.html
+++ b/home/templates/home/about.html
@@ -20,7 +20,7 @@
             </div>
         </div>
 		<div class="row">
-			<div class="col-sm-8 col-xs-1">
+			<div class="col-md-8 col-xs-1">
 				<p>
 					Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
 					aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
@@ -40,7 +40,7 @@
 					occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 				</p>
 			</div>
-			<div class="col-sm-4 col-xs-1">
+			<div class="col-md-4 col-xs-1">
 				<img class="card-img-top img-fluid" src="../media/about_page_img.jpg" alt="About page image">
 			</div>
 		</div>
