--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -15,9 +15,8 @@
     <div class="container h-100">
         <div class="row h-100">
             <div class="col-7 col-md-6 my-auto">
-                <h3 class="display-4 logo-font text-black">
-					Imagination to life
-                </h3>
+			    <h2 class="logo-font text-black index-title">Dungeons & Depictions</h2>
+                <h4 class="display-4 index-subtitle text-black">Where fantasy comes to life </h4>
 
 				<!-- View Showcase Button -->
                 <div class="my-5">
