Created foundation for request page.

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -35,7 +35,7 @@
 		</li>
 
         <li class="nav-item">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="{% url 'request_commission' %}" id="request-commission-link">
 				Requests
             </a>
         </li>
