--- a/showcase/templates/commissions/request_commission.html
+++ b/showcase/templates/commissions/request_commission.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
+{% load crispy_forms_tags %}
 
 {% block page_header %}
     <div class="container header-container">
@@ -16,11 +17,49 @@
             <div class="col-12 col-md-6">
                 <hr>
                 <h2 class="logo-font mb-4">Request a Commission</h2>
-                <h5 class="text-muted">Bring your fantasy to life.</h5>
                 <hr>
             </div>
         </div>
-
+        <div class="row">
+			<div class="col">
+                <h4>Rules</h4>
+				<ul>
+					<li>Only one character per commission.</li>
+					<li>Plain backgrounds only.</li>
+					<li>Nothing overly sexual or pornographic.</li>
+					<li>No gratuitous amounts of gore.</li>
+				</ul>
+				<h4>Prices</h4>
+				<ul>
+					<li>$50 per commission</li>
+					
+				</ul>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col">
+			    <p>The more description you give us, the better!</p>
+				<p>Think of things such as:</p>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-3">
+                <ul>
+                    <li>Race</li>
+                    <li>Gender</li>
+                    <li>Skin tone</li>
+                    <li>Hair</li>
+                </ul>
+			</div>
+			<div class="col-3">
+				<ul>
+					<li>Scars</li>
+					<li>Weapons</li>
+					<li>Favourite spell</li>
+					<li>Armour</li>
+				</ul>
+			</div>
+		</div>
         <div class="row">
             <div class="col-12 col-md-6">
                 <form method="POST" action="{% url 'request_commission' %}" class="form mb-2" enctype="multipart/form-data">
@@ -49,5 +88,10 @@
             var file = $('#new-image')[0].files[0];
             $('#filename').text(`Image will be set to: ${file.name}`);
         });
+    </script>
+    <script type="text/javascript">
+		if(window.location.href.indexOf("request") > -1) {
+			document.getElementById("request-price").value = "50.00";
+		}
     </script>
 {% endblock %}
