Have rendered requet form to hide sku.

--- a/showcase/templates/commissions/request_commission.html
+++ b/showcase/templates/commissions/request_commission.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
-{% load static %}
 {% load crispy_forms_tags %}
+{% load static %}
 
 {% block page_header %}
     <div class="container header-container">
@@ -24,6 +24,8 @@
 			<div class="col">
                 <h4>Rules</h4>
 				<ul>
+					<li>You will recieve a digital copy of your character <strong>within a week</strong> of purchasing.</li>
+					<li>The physical copy will be sent via post as soon as possible after.</li>
 					<li>Only one character per commission.</li>
 					<li>Plain backgrounds only.</li>
 					<li>Nothing overly sexual or pornographic.</li>
@@ -32,13 +34,13 @@
 				<h4>Prices</h4>
 				<ul>
 					<li>$50 per commission</li>
-					
 				</ul>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col">
-			    <p>The more description you give us, the better!</p>
+			    <h4>Description</h4>
+			    <p>What makes your character unique? The more description you give us, the better.</p>
 				<p>Think of things such as:</p>
 			</div>
 		</div>
