--- a/showcase/templates/commissions/add_commission.html
+++ b/showcase/templates/commissions/add_commission.html
@@ -20,7 +20,11 @@
                 <hr>
             </div>
         </div>
-
+		<div class="row">
+			<div class="col">
+				<p><strong>Warning:</strong> Add images at 380x580 pixels to be uniform.</p>
+			</div>
+		</div>
         <div class="row">
             <div class="col-12 col-md-6">
                 <form method="POST" action="{% url 'add_commission' %}" class="form mb-2" enctype="multipart/form-data">
