Finished requests page with the removal of image field.

--- a/showcase/templates/commissions/add_commission.html
+++ b/showcase/templates/commissions/add_commission.html
@@ -37,7 +37,7 @@
                         {% endif %}
                     {% endfor %}
                     <div class="text-right">
-                        <a class="btn btn-outline-black rounded-0" href="{% url 'commissions' %}">Cancel</a>
+                        <a class="btn btn-outline-black rounded-0" href="{% url 'commissions' %}?sort=category&direction=asc">Cancel</a>
                         <button class="btn btn-black rounded-0" type="submit">Add Commission</button>
                     </div>
                 </form>
