--- a/showcase/templates/commissions/request_commission.html
+++ b/showcase/templates/commissions/request_commission.html
@@ -16,7 +16,7 @@
         <div class="row">
             <div class="col-12 col-md-6">
                 <hr>
-                <h2 class="logo-font mb-4">Request a Commission</h2>
+                <h2 class="logo-font mb-4">Create a Commission</h2>
                 <hr>
             </div>
         </div>
@@ -68,15 +68,11 @@
                 <form method="POST" action="{% url 'request_commission' %}" class="form mb-2" enctype="multipart/form-data">
                     {% csrf_token %}
                     {% for field in form %}
-                        {% if field.name != 'image' %}
-                            {{ field | as_crispy_field }}
-                        {% else %}
-                            {{ field }}
-                        {% endif %}
+                        {{ field | as_crispy_field }}
                     {% endfor %}
                     <div class="text-right">
-                        <a class="btn btn-outline-black rounded-0" href="{% url 'commissions' %}">Cancel</a>
-                        <button class="btn btn-black rounded-0" type="submit">Request Commission</button>
+                        <a class="btn btn-outline-black rounded-0" href="{% url 'commissions' %}?sort=category&direction=asc">Cancel</a>
+                        <button class="btn btn-black rounded-0" type="submit">Create a Commission</button>
                     </div>
                 </form>
             </div>            
