Contact page full functional and styled as crispy form.

--- a/showcase/templates/commissions/commission_detail.html
+++ b/showcase/templates/commissions/commission_detail.html
@@ -76,7 +76,7 @@
                             </div>
 
                             <div class="col-12">
-                                <a href="{% url 'commissions' %}" class="btn btn-outline-black rounded-0 mt-5">
+                                <a href="{% url 'commissions' %}?sort=category&direction=asc" class="btn btn-outline-black rounded-0 mt-5">
                                     <span class="icon">
                                         <i class="fas fa-chevron-left"></i>
                                     </span>
