--- a/home/templates/home/contact.html
+++ b/home/templates/home/contact.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load crispy_forms_tags %}
 {% load static %}
 
 {% block page_header %}
@@ -20,7 +21,20 @@
             </div>
         </div>
 		<div class="row">
-			
+			<div class="col">
+				<p>
+                    Please get in touch with us with any questions regarding orders or commissions.
+                </p>
+			</div>
+		</div>
+        <br>
+		<div class="row">
+			<div class="col-12 col-md-6">
+                <form role="form" action="" method="POST" class="form mb-2" enctype="multipart/form-data">
+                    {% csrf_token %}
+					{% crispy form %}
+                </form>
+            </div>
 		</div>
 	</div>
 {% endblock %}
