--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -47,7 +47,7 @@
 		</li>
 
         <li class="nav-item">
-            <a class="logo-font font-weight-bold nav-link text-black" href="#" id="contact-link">
+            <a class="logo-font font-weight-bold nav-link text-black" href="{% url 'contact' %}" id="contact-link">
                 Contact
             </a>
         </li>
