--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -41,7 +41,7 @@
         </li>
 
 		<li class="nav-item">
-			<a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" aria-haspopup="true" aria-expanded="false">
+			<a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="blog-link">
 				Blog
 			</a>
 		</li>
