--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -24,7 +24,7 @@
 				<div class="card-body">
 					<h1>{% block title %} {{ object.title }} {% endblock title %}</h1>
 					<p class=" text-muted">{{ post.author }} | {{ post.created_on }}</p>
-					<p class="card-text ">{{ object.content | safe }}</p>
+					<p class="card-text ">{{ object.content | linebreaks }}</p>
 				</div>
                 <div class="col-12">
                     <a href="{% url 'blog' %}" class="btn btn-outline-black rounded-0 mt-5">
@@ -37,6 +37,19 @@
 			</div>
 		</div>
 	</div>
+	<div class="btt-button shadow-sm rounded-0 border border-black">
+		<a class="btt-link d-flex h-100">
+			<i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
+		</a>
+	</div>
 {% endblock %}
 
+{% block postloadjs %}
+    {{ block.super }}
+    <script type="text/javascript">
+        $('.btt-link').click(function(e) {
+                window.scrollTo(0,0)
+            })
+    </script>
+{% endblock %}
 
