--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load crispy_forms_tags %}
 {% load static %}
 
 {% block page_header %}
@@ -20,12 +21,48 @@
             </div>
         </div>
 		<div class="row">
-			<div class="col-md-8 card mb-4  mt-3 left  top">
+			<div class="col-md-8 card mb-4 mt-3 left top">
 				<div class="card-body">
-					<h1>{% block title %} {{ object.title }} {% endblock title %}</h1>
+					<h1>{% block title %} {{ post.title }} {% endblock title %}</h1>
 					<p class=" text-muted">{{ post.author }} | {{ post.created_on }}</p>
-					<p class="card-text ">{{ object.content | linebreaks }}</p>
+					<p class="card-text ">{{ post.content | linebreaks }}</p>
 				</div>
+        </div>
+		<div class="row">
+            <div class="col-md-8 card mb-4 mt-3 left top">
+                <div class="card-body">
+                    <!-- comments -->
+                    <h2>{{ comments.count }} comments</h2>
+            
+                    {% for comment in comments %}
+                    <div class="comments">
+                        <p class="font-weight-bold">
+                            {{ comment.name }}
+                            <span class=" text-muted font-weight-normal">
+                                    {{ comment.created_on }}
+                            </span>
+                        </p>
+                        {{ comment.body | linebreaks }}
+                    </div>
+                    {% endfor %}
+                </div>
+            </div>
+            <div class="col-md-8 card mb-4 mt-3 left top">
+                <div class="card-body">
+                    {% if new_comment %}
+                    <div class="alert alert-success" role="alert">
+                        Your comment is awaiting moderation
+                    </div>
+                    {% else %}
+                    <h3>Leave a comment</h3>
+                    <form method="post">
+						{% csrf_token %}
+						{{ comment_form | crispy }}
+                        <button type="submit" class="btn btn-black rounded-0 btn-lg">Submit</button>
+                    </form>
+                    {% endif %}
+                </div>
+            </div>
                 <div class="col-12">
                     <a href="{% url 'blog' %}" class="btn btn-outline-black rounded-0 mt-5">
                         <span class="icon">
