--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -21,7 +21,7 @@
             </div>
         </div>
 		<div class="row">
-			<div class="col-md-8 card mb-4 mt-3 left top">
+			<div class="col-md-8 mt-3 left">
 				<div class="card-body">
 					<h1>{% block title %} {{ post.title }} {% endblock title %}</h1>
 					<p class=" text-muted">{{ post.author }} | {{ post.created_on }}</p>
@@ -29,7 +29,7 @@
 				</div>
         </div>
 		<div class="row">
-            <div class="col-md-8 card mb-4 mt-3 left top">
+            <div class="col-md-8 mt-3 left">
                 <div class="card-body">
                     <!-- comments -->
                     <h2>{{ comments.count }} comments</h2>
@@ -47,14 +47,14 @@
                     {% endfor %}
                 </div>
             </div>
-            <div class="col-md-8 card mb-4 mt-3 left top">
+            <div class="col-md-8 mt-3 left">
                 <div class="card-body">
                     {% if new_comment %}
                     <div class="alert alert-success" role="alert">
                         Your comment is awaiting moderation
                     </div>
                     {% else %}
-                    <h3>Leave a comment</h3>
+                    <h3>Tell us what you think</h3>
                     <form method="post">
 						{% csrf_token %}
 						{{ comment_form | crispy }}
