--- a/home/templates/home/about.html
+++ b/home/templates/home/about.html
@@ -15,7 +15,7 @@
         <div class="row">
             <div class="col">
                 <hr>
-                <h2 class="logo-font mb-4">About Page</h2>
+                <h2 class="logo-font mb-4">About</h2>
                 <hr>
             </div>
         </div>
