--- a/showcase/templates/commissions/request_commission.html
+++ b/showcase/templates/commissions/request_commission.html
@@ -65,16 +65,21 @@
 		</div>
         <div class="row">
             <div class="col-12 col-md-6">
-                <form method="POST" action="{% url 'request_commission' %}" class="form mb-2" enctype="multipart/form-data">
-                    {% csrf_token %}
-                    {% for field in form %}
+                {% if user.is_authenticated %}
+                    <form method="POST" action="{% url 'request_commission' %}" class="form mb-2" enctype="multipart/form-data">
+                        {% csrf_token %}
+                        {% for field in form %}
                         {{ field | as_crispy_field }}
-                    {% endfor %}
-                    <div class="text-right">
-                        <a class="btn btn-outline-black rounded-0" href="{% url 'commissions' %}?sort=category&direction=asc">Cancel</a>
-                        <button class="btn btn-black rounded-0" type="submit">Create a Commission</button>
-                    </div>
-                </form>
+                        {% endfor %}
+                        <div class="text-right">
+                            <a class="btn btn-outline-black rounded-0" href="{% url 'commissions' %}?sort=category&direction=asc">Cancel</a>
+                            <button class="btn btn-black rounded-0" type="submit">Create a Commission</button>
+                        </div>
+                    </form>
+                {% else %}
+                    <a class="text-info" href="{% url 'account_signup' %}">Create an account</a> or 
+                    <a class="text-info" href="{% url 'account_login' %}">login</a> to be able to request a commission.
+                {% endif %}
             </div>            
         </div>
     </div>
