Added design folder with wireframe images.

--- a/showcase/templates/commissions/request_commission.html
+++ b/showcase/templates/commissions/request_commission.html
@@ -73,7 +73,7 @@
                         {% endfor %}
                         <div class="text-right">
                             <a class="btn btn-outline-black rounded-0" href="{% url 'commissions' %}?sort=category&direction=asc">Cancel</a>
-                            <button class="btn btn-black rounded-0" type="submit">Create a Commission</button>
+                            <button class="btn btn-black rounded-0" type="submit">Create Commission</button>
                         </div>
                     </form>
                 {% else %}
