--- a/templates/base.html
+++ b/templates/base.html
@@ -166,19 +166,19 @@
 					<ul class="list-inline">
 						<li class="list-inline-item">
 							<a target="_blank"
-								href="https://www.facebook.com">
+								href="https://www.facebook.com" rel="noopener">
 								<i class="fa fa-facebook" aria-hidden="true"></i>
 								<span class="sr-only">Facebook</span>
 							</a>
 						</li>
 						<li class="list-inline-item">
-							<a target="_blank" href="https://www.instagram.com">
+							<a target="_blank" href="https://www.instagram.com" rel="noopener">
 								<i class="fa fa-instagram" aria-hidden="true"></i>
 								<span class="sr-only">Instagram</span>
 							</a>
 						</li>
 						<li class="list-inline-item">
-							<a target="_blank" href="https://www.pinterest.com">
+							<a target="_blank" href="https://www.pinterest.com" rel="noopener">
 								<i class="fa fa-pinterest" aria-hidden="true"></i>
 								<span class="sr-only">Pinterest</span>
 							</a>
