--- a/static/css/base.css
+++ b/static/css/base.css
@@ -7,7 +7,7 @@ body {
     background-size: cover;
     height: calc(100vh - 164px);
     color: black;
-    font-family: 'MedievalSharp', cursive;
+    font-family: 'MedievalSharp', "Sans Serif";
 }
 
 #main-nav,
