Updated README file across all files and added TESTING.md file.

--- a/home/templates/home/about.html
+++ b/home/templates/home/about.html
@@ -41,7 +41,7 @@
 				</p>
 			</div>
 			<div class="col-md-4 col-xs-1">
-				<img class="card-img-top img-fluid" src="../media/about_page_img.jpg" alt="About page image">
+				<img class="card-img-top img-fluid" src="https://dungeons-and-depictions.s3-eu-west-1.amazonaws.com/media/about_page_img.jpg" alt="About page image">
 			</div>
 		</div>
 	</div>
