Filled out content on about page and added working links.

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -36,7 +36,7 @@
 
         <li class="nav-item">
             <a class="logo-font font-weight-bold nav-link text-black mr-5" href="{% url 'request_commission' %}" id="request-commission-link">
-				Requests
+				Commissions
             </a>
         </li>
 
