--- a/home/templates/home/about.html
+++ b/home/templates/home/about.html
@@ -22,22 +22,24 @@
 		<div class="row">
 			<div class="col-md-8 col-xs-1">
 				<p>
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-					aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-					aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-					occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+					Dungeons & Depictions provides high quality D&D character artwork in the form of A3 posters you can order from our existing works 
+                    in our <a href="{% url 'commissions' %}?sort=category&direction=asc">showcase</a>.
                 </p>
 				<p>
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-					aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-					Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-					occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+					You can also have your very own character brought to life via our <a href="{% url 'request_commission' %}">commissions</a> page. Our in-house team of artists produce high 
+                    quality commissions for very good value. You will receive the digital version within a week of purchasing and the A3 poster of 
+                    it shortly after, postal times depending.
 				</p>
 				<p>
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-					aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-					Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-					occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+					Please note that images in the showcase are purposely at lower quality as an anti-theft initiative and the art 
+                    shipped is printed from HD images.
+				</p>
+				<p>
+					Founded in 2020, Dungeon & Depictions strives to combine our team's two greatest passions; D&Ds and art. Please check out our <a href="{% url 'blog' %}">blog</a> 
+                    to find out what our team has been up to.
+				</p>
+				<p>
+					Any questions for the team regarding orders, our art or inspirations, get in touch with us <a href="{% url 'contact' %}">here</a>.
 				</p>
 			</div>
 			<div class="col-md-4 col-xs-1">
